Removed login and fixed white space bug for smaller screens

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -311,7 +311,8 @@ a {
 @media only screen and (max-width: 767px) {
   /* h1 font size home slider */
   h1 {
-    font-size: 30px;
+    font-size: 25px !important;
+
   }
   /* fun facts */
   /* services */
@@ -323,6 +324,8 @@ a {
     margin: 0 auto 40px;
     width: 280px;
   }
+
+
 }
 /*============================================================
 	Mobile (Landscape) Design for a width of 480px
@@ -335,3 +338,4 @@ a {
     font-size: 35px;
   }
 }
+
