--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -157,3 +157,10 @@
     padding: 20px 10px;
   }
 }
+
+#nav-text {
+  font-size: 20px !important;
+}
+
+
+
